--- a/structure.html
+++ b/structure.html
@@ -1,28 +1,14 @@
-<section id="slideshow">
-    <section class="slide-wrapper">
-
-        <!-- Define each of the slides
-     and write the content -->
-
-        <section class="slide">
-            <h1 class="slide-number">
-                GeeksforGeeks
-            </h1>
+<section id="cookies-banner">
+    <section class="container">
+        <section class="item">
+            <i class="fa-solid fa-cookie-bite"></i>
         </section>
-        <section class="slide">
-            <h1 class="slide-number">
-                A computer science portal
-            </h1>
+        <section class="item">
+            <p>We use third-party cookies in order to personalize your site experience.</p>
         </section>
-        <section class="slide">
-            <h1 class="slide-number">
-                This is an example of
-            </h1>
-        </section>
-        <section class="slide">
-            <h1 class="slide-number">
-                Slideshow with HTML and CSS only
-            </h1>
+        <section class="item">
+            <button id="allow">Allow</button>
+            <button id="decline">Decline</button>
         </section>
     </section>
 </section>
