--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <!-- Montserrat -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- Raleway -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body onload="checkCookie()">
     <div>
@@ -103,22 +111,7 @@
                 </form>
             </section>
         </main>
-
-        <section id="cookies-banner">
-            <section class="container">
-                <section class="item">
-                    <i class="fa-solid fa-cookie-bite"></i>
-                </section>
-                <section class="item">
-                    <p>We use third-party cookies in order to personalize your site experience.</p>
-                </section>
-                <section class="item">
-                    <button id="allow">Allow</button>
-                    <button id="decline">Decline</button>
-                </section>
-            </section>
-        </section>
-        
+      
         <footer class="site-footer">
             <section class="footer-content">
                 <section class="logo">
