--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!-- 
+         _     _
+        (')-=-(')
+     __(   "   )__
+    / _/'-----'\_ \
+ ___\\ \\     // //___
+ >____)/_\---/_\(____<
+    LOOK AT MY FROG!
+┬┌┐┌┌┬┐┌─┐─┐ ┬
+││││ ││├┤ ┌┴┬┘
+┴┘└┘─┴┘└─┘┴ └─
+ -->
 <!DOCTYPE html>
 <html lang="ca">
 <head>
@@ -8,7 +20,6 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- JS -->
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script src="email.js"></script>
      <!-- Font Awesome CDN link -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- FontAwesome CDN -->
@@ -148,6 +159,7 @@
             </section>
         </footer>
     </div>
+    <script src="js/email.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
