--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <!-- Estils -->
     <link rel="stylesheet" href="css/style.css">
     <!-- JS -->
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
      <!-- Font Awesome CDN link -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- FontAwesome CDN -->
@@ -159,7 +158,12 @@
             </section>
         </footer>
     </div>
-    <script src="js/email.js"></script>
+   <!-- Include the latest EmailJS SDK -->
+    <script type="text/javascript" 
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <!-- Your own email.js file -->
+    <script type="text/javascript" src="js/email.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
