--- a/structure.html
+++ b/structure.html
@@ -1,14 +1,19 @@
-<section id="cookies-banner">
-    <section class="container">
-        <section class="item">
-            <i class="fa-solid fa-cookie-bite"></i>
-        </section>
-        <section class="item">
-            <p>We use third-party cookies in order to personalize your site experience.</p>
-        </section>
-        <section class="item">
-            <button id="allow">Allow</button>
-            <button id="decline">Decline</button>
+<footer class="site-footer">
+    <section class="footer-content">
+        <p>&copy; 2024 Graphic Designer. All rights reserved.</p>
+        <section class="social-media">
+            <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-icon instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/yourprofile" target="_blank" class="social-icon facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://twitter.com/yourprofile" target="_blank" class="social-icon twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="social-icon linkedin">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
         </section>
     </section>
-</section>
+</footer>
