Canvi de tema segons tema del dispositiu

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li><a href="#portfolio">Portfoli</a></li>
                     <li><a href="#contact">Contacte</a></li>
                 </ul>
-                <img src="icons/moon.png" id="icon">
+                <img src="icons/moon.svg" id="icon">
             </nav>                
         </header>
 
